apply font and fix some spacing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+
+body {
+  font-family: "Rubik", sans-serif;
+}
+
 .btn-primary {
   background-color: #8bac3e;
   border-color: #8bac3e;
